# AAAI25-clkan

./: .gitignore  README.md  pyproject.toml
dataset/: eurowind.ipynb  feynman.ipynb  riverradar.ipynb
notebooks/: AAAI25_clkan_9798c8d.csv  optuna.ipynb  plotstyle.py  tables.ipynb
src/claiutil/: __init__.py  __main__.py  _util.py  datasets.py  metrics.py
src/claiutil/regularization/: __init__.py  _common.py  ewc.py  si.py
src/claiutil/torch/: env.py  preload.py
src/clkan/: __main__.py  cli.py  config.py  prune.py  regression_loop.py  test_kan_plot.py
src/clkan/conf/: base.yaml
src/clkan/conf/figure/gradient_magnitude/: kan_narrow.yaml  kan_wide.yaml  mlp_wide.yaml
src/clkan/conf/hydra/help/: clkan_help.yaml
src/clkan/conf/scenario/eurowind/: base.yaml  ewc-kan.yaml  ewc-mlp.yaml  joint-kan.yaml  joint-mlp.yaml  kan.yaml  mlp.yaml  packnet.yaml  si-kan.yaml  si-mlp.yaml  wisekan.yaml  wisemlp.yaml
src/clkan/conf/scenario/feynman/: base.yaml  ewc-kan.yaml  ewc-mlp.yaml  joint-kan.yaml  kan.yaml  (+7 more)
src/clkan/conf/sweep/: ewc-kan.yaml  ewc-mlp.yaml  joint-kan.yaml  joint-mlp.yaml  kan.yaml  mlp.yaml  packnet.yaml  si-kan.yaml  si-mlp.yaml  wisekan.yaml  wisemlp.yaml
src/clkan/model/: __init__.py  base.py  mlp.py  paraiso.py  wisekan.py  wisemlp.py  wisenet.py
src/clkan/plot/: kan.py
src/clkan/plugin/: wisekan_plugin.py
src/clkan/regression/: base.py  ewc.py  packnet.py  si.py  wisekan.py  wisemlp.py
src/clkan/scenario/: __init__.py  gaussian_peaks.py  incremental_feynman.py  task_incremental_regression.py
src/efficient_kan/: __init__.py  kan.py
(+15 files in other folders)
